# HomeVM-Manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: logger.py  vm_control.py  vm_data.py  vm_info.py
data/: vmlist.json  vmlist.json.bak
tests/: debug_import.py  test_core.py  test_ui.py
ui/: main_window.ui  style.qss  style_cyber.qss  style_modern.qss
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html
